# princeton-scraper-seas-faculty

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: static-feeds.yaml
csv/: index.csv
feeds/: index.csv  index.json
json/: index.json
src/princeton_scraper_seas_faculty/: __init__.py  __main__.py  campus_directory.py  constants.py  helpers.py  output.py  seas_faculty_directory.py
tests/: test_princeton_scraper_seas_faculty.py
