[tool.poetry]
name = "princeton-scraper-seas-faculty"
version = "1.0.0"
description = "A web scraper that produces JSON feeds directly and automatically from the Princeton SEAS faculty directory."
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
bs4 = "^0.0.1"
comma = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
