[tool.poetry]
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
description = "A web scraper that produces JSON feeds directly and automatically from the Princeton SEAS faculty directory."
name = "princeton-scraper-seas-faculty"
version = "1.3.0"

[tool.poetry.dependencies]
bs4 = "^0.0.1"
comma = "0.5.3"
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
